fix footer gap on stats pages (bug 699386)

--- a/media/css/impala/stats.less
+++ b/media/css/impala/stats.less
@@ -19,6 +19,9 @@
     hgroup {
         clear: both;
     }
+    .ui-helper-hidden-accessible {
+        display: none !important;
+    }
 }
 .html-rtl.statistics #page .header-search {
     right: auto;
